--- a/Landing Page/src/styles/header.css
+++ b/Landing Page/src/styles/header.css
@@ -4,10 +4,10 @@ header {
     position: sticky;
     top: 0;
     background-color: #fff9ea;
-    z-index: 2;
+    z-index: 3;
 }
 
-#nav-bar {
+#navbar {
     width: 100%;
     display: flex;
     align-items: center;
@@ -45,9 +45,10 @@ header {
 }
 
 @media screen and (max-width: 1170px) {
-    #nav-list, #nav-bar .btn-default {
+    #nav-list, #navbar .btn-default {
         display: none;
     }
+
     #mobile-btn {
         display: block;
         border: none;
@@ -60,13 +61,6 @@ header {
         display: flex;
         flex-direction: column;
         align-items: center;
-    }
-
-    #mobile-nav-list {
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-        margin: 12px 0px;
     }
 
     #mobile-nav-list .nav-item {
