--- a/Landing Page/src/styles/menu.css
+++ b/Landing Page/src/styles/menu.css
@@ -1,9 +1,9 @@
 #menu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+min-height: 100vh;
 }
 
 #dishes {
@@ -34,7 +34,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1.56rem;
+    font-size: 1.563rem;
     color: #fff9ea;
     width: 70px;
     height: 70px;
@@ -43,12 +43,12 @@
     border-radius: 0px 37.5px 0px 42.5px;
 }
 
-.dish-description {
+.dish-desciption {
     color: #434343;
     text-align: center;
 }
 
-.dish-rate {
+.dish-rate i {
     color: #e9a209;
 }
 
@@ -59,14 +59,16 @@
 }
 
 @media screen and (max-width: 1170px) {
-    #dishes {
+    #dishes{
         flex-wrap: wrap;
         justify-content: center;
     }
+
     .dish {
         width: calc(50% - 12px);
     }
 }
+
 
 @media screen and (max-width: 600px) {
     .dish {
@@ -76,4 +78,4 @@
     #menu .section-subtitle {
         text-align: center;
     }
-} 
+}
