--- a/Landing Page/src/styles/styles.css
+++ b/Landing Page/src/styles/styles.css
@@ -1,10 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('header.css');
+@import url('home.css');
+@import url('menu.css');
+@import url('testimonials.css');
+@import url('footer.css');
 * {
-    font-family: "Poppins", sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+html {
+scroll-behavior: smooth;
 }
 
 body {
@@ -26,7 +34,7 @@ section {
     font-weight: 600;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    transition: backgound-color .3s ease;
+    transition: background-color .3s ease;
 }
 
 .btn-default:hover {
@@ -59,9 +67,9 @@ section {
 
 .section-title {
     color: #e9a209;
-    font-size: 1.56rem;
+    font-size: 1.563rem;
 }
 
 .section-subtitle {
-    font-size: 2.19rem;
+    font-size: 2.1875rem;
 }
